--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
-- name: Update apt repo and cache on all Debian/Ubuntu boxes
-  apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+- name: ensure nano is there
+  apt:
+    name: nano
+    state: latest
+# - name: Update apt repo and cache on all Debian/Ubuntu boxes
+#   apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
