--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -2,6 +2,6 @@
 - name: ensure nano is there
   apt:
     name: nano
-    state: latest
+    state: absent
 # - name: Update apt repo and cache on all Debian/Ubuntu boxes
 #   apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
