--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,8 @@
 - hosts: all
+  remote_user: will
   gather_facts: False
   become: true
+  become_method: sudo
   become_user: root
   roles:
   - deploy
