--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
-- name: ensure nano is there
-  apt:
-    name: nano
-    state: absent
+- name: My playbook
+  hosts: testpi
+  become: yes
+  tasks:
+    - name: ensure nano is there
+      apt:
+        name: nano
+        state: absent
 # - name: Update apt repo and cache on all Debian/Ubuntu boxes
 #   apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
