--- a/update-linux.yml
+++ b/update-linux.yml
@@ -1,3 +1,10 @@
 ---
-- name: Update apt repo and cache on all Debian/Ubuntu boxes
-  apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+---
+  - name: Nanotest
+    hosts: all
+    gather_facts: no
+    become: yes
+    become_user: root
+    tasks:
+    - name: Update apt repo and cache on all Debian/Ubuntu boxes
+      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
