--- a/install-local.yml
+++ b/install-local.yml
@@ -1,11 +1,11 @@
 ---
-- hosts: locahost
+- hosts: all
   gather_facts: true
   become: true
   become_user: root
   tasks:
     - name: install pip3
       apt: name=python3-pip state=present 
-    - name: Install Ansible.
+    - name: Install pywinrm.
       ansible.builtin.pip:
         name: pywinrm>=0.2.2
