--- a/octoprint-webcamrestart.yml
+++ b/octoprint-webcamrestart.yml
@@ -10,29 +10,29 @@
     - name: pkill mjpg_streamer
       command: sudo pkill mjpg_streamer
 
-    - name: grep webcam
-      command: ps -ax|grep webcam
+    # - name: grep webcam
+    #   command: ps -ax|grep webcam
 
-    - name: grep mjpg
-      command: ps -ax|grep mjpg
+    # - name: grep mjpg
+    #   command: ps -ax|grep mjpg
 
     - name: curl action=snapshot
       command: curl -o ~/screenshot.png http://localhost:8080/?action=snapshot
 
     - name: curl -v http://localhost:8080/
       command: curl -v http://localhost:8080/
-      
-    - name: pkill mjpg_streamer
-      command: sudo pkill mjpg_streamer
 
     - name: pkill mjpg_streamer
       command: sudo pkill mjpg_streamer
 
-    - name: grep webcam
-      command: ps -ax|grep webcam
+    - name: pkill mjpg_streamer
+      command: sudo pkill mjpg_streamer
 
-    - name: grep mjpg
-      command: ps -ax|grep mjpg
+    # - name: grep webcam
+    #   command: ps -ax|grep webcam
+
+    # - name: grep mjpg
+    #   command: ps -ax|grep mjpg
 
     - name: curl action=snapshot
       command: curl -o ~/screenshot.png http://localhost:8080/?action=snapshot
