--- a/changehostname.yml
+++ b/changehostname.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: "Get current hostname"
       shell: |
-        cat /etc/resolv.conf
+        cat /etc/hostname
       register: current_hostname
 
     - name: "Print the file content to a console"
