--- a/quem-agent-install.yml
+++ b/quem-agent-install.yml
@@ -7,8 +7,8 @@
     - name: update apt cache
       command: apt update
 
-    - name: add universe repo
-      command: add-apt-repository universe
+    # - name: add universe repo
+    #   command: add-apt-repository universe
       
     - name: update apt cache
       command: apt update
