--- a/quem-agent-install.yml
+++ b/quem-agent-install.yml
@@ -10,8 +10,8 @@
     # - name: add universe repo
     #   command: add-apt-repository universe
       
-    - name: update apt cache
-      command: apt update
+    # - name: update apt cache
+    #   command: apt update
 
     - name: install qemu guest agent
       apt:
