--- a/windows-autologin.yml
+++ b/windows-autologin.yml
@@ -6,6 +6,11 @@
   tasks:
   - name: Mount nas
     command: sudo touch /home/will/Films/ha/login/login.txt
+  - name: Pause for 5 minutes to build app cache
+    ansible.builtin.pause:
+      minutes: 1
+  - name: Mount nas
+    command: sudo touch /home/will/Films/ha/login/login.txt
 
     # - name: Set service startup mode to auto and ensure it is started
     #   ansible.windows.win_service:
