--- a/windows-autologin.yml
+++ b/windows-autologin.yml
@@ -10,7 +10,7 @@
     ansible.builtin.pause:
       minutes: 1
   - name: Mount nas
-    command: sudo touch /home/will/Films/ha/login/login.txt
+    command: sudo rm /home/will/Films/ha/login/login.txt
 
     # - name: Set service startup mode to auto and ensure it is started
     #   ansible.windows.win_service:
