--- a/windows-autologin.yml
+++ b/windows-autologin.yml
@@ -4,12 +4,12 @@
   become: true
   become_user: root
   tasks:
-  - name: Mount nas
+  - name: add login file
     command: sudo touch /home/will/Films/ha/login/login.txt
   - name: Pause for 5 minutes to build app cache
     ansible.builtin.pause:
-      minutes: 1
-  - name: Mount nas
+      minutes: 5
+  - name: remove login file.
     command: sudo rm /home/will/Films/ha/login/login.txt
 
     # - name: Set service startup mode to auto and ensure it is started
