--- a/winmsg.yml
+++ b/winmsg.yml
@@ -3,6 +3,8 @@
     hosts: all
     gather_facts: false
     tasks:
+      - debug:
+          var: ansible_winrm_server_cert_validation
       - name: winmsg
         win_msg:
           display_seconds: 60
