--- a/windows-autologin.yml
+++ b/windows-autologin.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   gather_facts: true
-  # become: true
+  become: true
   # become_user: root
   # vars:
   #     ansible_shell_type: powershell
