--- a/winmsg.yml
+++ b/winmsg.yml
@@ -5,6 +5,8 @@
     tasks:
       - debug:
           var: ansible_winrm_server_cert_validation
+      - name: Minimize all windows and show desktop
+        win_shell: "(New-Object -ComObject Shell.Application).MinimizeAll()"
       - name: winmsg
         win_msg:
           display_seconds: 60
