--- a/winmsg.yml
+++ b/winmsg.yml
@@ -3,13 +3,12 @@
     hosts: all
     gather_facts: false
     tasks:
-      - debug:
-          var: ansible_winrm_server_cert_validation
       - name: Minimize all windows and show desktop
         community.windows.psexec:
           connection_username: "{{ ansible_user }}"
           connection_password: "{{ ansible_password }}"
-          command: powershell -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
+          # command: powershell -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
+          command: "C:\\psexec.exe powershell.exe \"& {(New-Object -ComObject Shell.Application).MinimizeAll()}\""
           # executable: powershell.exe
           # arguments: -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
           interactive: yes
