--- a/winmsg.yml
+++ b/winmsg.yml
@@ -5,10 +5,10 @@
     tasks:
       - name: Minimize all windows and show desktop
         community.windows.psexec:
-          connection_username: "{{ ansible_user }}"
-          connection_password: "{{ ansible_password }}"
+          # connection_username: "{{ ansible_user }}"
+          # connection_password: "{{ ansible_password }}"
           # command: powershell -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
-          command: "C:\\psexec.exe powershell.exe \"& {(New-Object -ComObject Shell.Application).MinimizeAll()}\""
+          command: "C:\\psexec.exe powershell.exe \"(New-Object -ComObject Shell.Application).MinimizeAll()\""
           # executable: powershell.exe
           # arguments: -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
           # interactive: yes
