--- a/winmsg.yml
+++ b/winmsg.yml
@@ -4,7 +4,8 @@
     gather_facts: false
     tasks:
       - name: Minimize
-        win_command: powershell -command "& {(New-Object -ComObject Shell.Application).MinimizeAll()}"
+        win_command: cmd /k "c:\psexec.exe -i \\Will-PC powershell.exe -command '& {(New-Object -ComObject Shell.Application).MinimizeAll()}'"
+        
         interactive: yes
         elevated: no
       # - name: Minimize all windows and show desktop
