--- a/homeassistant-restart.yml
+++ b/homeassistant-restart.yml
@@ -7,6 +7,7 @@
         url: "https://homeassistant.willkennedy.info/lovelace/0"  # Replace with your desired URL
         method: GET
       register: response
+      ignore_errors: yes
 
     - name: Check HTTP status code
       assert:
