--- a/homeassistant-restart.yml
+++ b/homeassistant-restart.yml
@@ -35,18 +35,24 @@
       # when: vmstatus.status == "running"
       when: response.status != 200
 
-    - name: stop if started
-      community.general.proxmox_kvm:
-        api_user: "{{ api_user}}"
-        api_token_id: "{{ api_token_id }}"
-        api_token_secret: "{{ api_token_secret }}"
-        api_host: "{{ api_host }}"
-        vmid: 100
-        node: "{{ node }}"
-        state: stopped
-        force_stop: yes  # Forcefully stop the VM
-      when: response.status != 200
-      register: vmstatus
+    - name: Execute Proxmox VM stop command
+      proxmox:
+        command: "qm stop 100 --hard"  # Replace 100 with your VM ID
+        node: pve  # Replace with the name of your Proxmox node
+      become: yes
+      
+    # - name: stop if started
+    #   community.general.proxmox_kvm:
+    #     api_user: "{{ api_user}}"
+    #     api_token_id: "{{ api_token_id }}"
+    #     api_token_secret: "{{ api_token_secret }}"
+    #     api_host: "{{ api_host }}"
+    #     vmid: 100
+    #     node: "{{ node }}"
+    #     state: stopped
+    #     force_stop: yes  # Forcefully stop the VM
+    #   when: response.status != 200
+    #   register: vmstatus
 
     - name: Sleep for 10 seconds for vm to start
       ansible.builtin.wait_for:
